cluster/kubernetes/apps/kube-system/cilium/ingress/hubble-http-route.yaml
---
# yaml-language-server: $schema=https://k8s-schemas.home-operations.com/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: hubble-dashboard
  namespace: kube-system
  labels:
    route-label: external-dns-internal
spec:
  parentRefs:
    - name: internal-gateway
      namespace: network
      sectionName: hubble-dashboard
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: hubble-ui
          port: 80
